直接在CabinetClock页面显示开始的时间戳

--- a/Html.CabinetClock.html
+++ b/Html.CabinetClock.html
@@ -1,11 +1,18 @@
 <html>
 <head>
 
+
 <head>
     <title>CabinetTimer</title>
     <h1>CabinetTimer</h1>
     <p>！！会议过程中请不要关闭本窗口！！</p>
 </head>
+
+<script type="text/javascript">
+    var d=new Date();
+    document.write("当前时间戳（13位）:  " + d.getTime());
+    document.write("  把他记下来，待会有用")
+</script>
 
 <form name=basic>
     <input type=text name=timeratiox value="ratio" size=5>
