--- a/Html.CabinetClock.with.amazeUI.html
+++ b/Html.CabinetClock.with.amazeUI.html
@@ -46,6 +46,7 @@
     <li>使用过程中不要关闭本窗口！</li>
     <li>会议开始按钮只能点击一次</li>
     <li>会议结束前请记下结束时的时间戳（最后3位数可以随便填==）</li>
+    <li>开发过程中我不会刻意去兼容老旧的浏览器</li>
   </ul>
 </div>
 
@@ -59,20 +60,58 @@
     document.write("  把他记下来")
 </script>
 
-<!-- 显示时间参数 -->
-<form name=basic>
-    <input type=text name=timeratiox value="ratio" class="am-btn am-btn-primary" size=15>
-    <input type=text name=starttimex value="start" class="am-btn am-btn-primary" size=15>
+<!-- 输入时间参数 -->
+<!--
+<form name=basic class="am-form" method="POST">
+    <legend>输入基本数值</legend>
+    <div class="am-form-group">
+        <label for="timeratio">时间转换比</label>
+        <input type=text name=timeratio value="ratio" class="am-btn am-btn-primary am-form-field am-round" size=15>
+        <label for="starttime">初始时间戳</label>
+        <input type=text name=starttime value="start" class="am-btn am-btn-primary am-form-field am-round" size=15>
+        <input type="button" value="设定数值" class="am-btn am-btn-primary" onClick="setdata()" size=15>
+        </div>
+</form>
+-->
+
+<form name=basic class="am-form">
+    <div class="am-form-group">
+        <label for="ratio">时间转换比</label>
+        <input type=text name=timeratiox value="ratio" class="am-btn am-btn-primary am-form-field am-round" size=15>
+        <label for="starttime">初始时间戳</label>
+        <input type=text name=starttimex value="starttime" class="am-btn am-btn-primary am-form-field am-round" size=15>
+        </div>
 </form>
 
+<!-- 弹框输入时间参数 -->
 <script language=javascript>
-    var timeratio = prompt(" 输入时间转换比 "); //获取输入的转换比
+    var timeratio = prompt(" 输入时间转换比 "); //弹框输入转换比
     var timeratiox = parseInt(timeratio); //将输入的转换比转化为数值
     document.basic.timeratiox.value = timeratiox; //将转换比显示在输入框中
-    var starttime = prompt(" 输入开始的时间戳(刚才你记下来的） "); //获取输入的初始时间戳
+    var starttime = prompt(" 输入开始的时间戳（刚才你记下来的） "); //弹框输入初始时间戳
     var starttimex = parseInt(starttime); //将输入的初始时间戳转化为数值
     document.basic.starttimex.value = starttimex; //将初始时间戳显示在输入框中
 </script>
+
+
+
+<!-- 获取basic表单输入的参数 -->
+<!--
+<script language=javascript>
+    var timeratiox = parseInt(timeratio); //将输入的转换比转化为数值
+    var starttimex = parseInt(starttime); //将输入的初始时间戳转化为数值
+</script>
+-->
+<!--
+<script type="text/javascript">
+    function setdata()
+    {
+    var c=starttimex
+    var t
+    }
+</script>
+-->
+
 
 <!-- 对时间参数进行计算 -->
 <script type="text/javascript">
@@ -90,14 +129,15 @@
 </head>
 
 <body>
-<form>
-    <input type="button" value="开会啦！！" class="am-btn am-btn-primary" onClick="timedCount()" size=10>
-    <input type="text" id="meetingtime" class="am-btn am-btn-primary" size=20>
+<form class="am-form">
+    <input type="button" value="会议开始" class="am-btn am-btn-primary " onClick="timedCount()" size=15>
+    <input type="text" id="meetingtime" size=15>
 </form>
 
 <p>   </p>
 <p>   </p>
 
+<!--
 <form class="am-form">
 
     <legend>输出区域</legend>
@@ -107,6 +147,7 @@
       <input type="text" class="" id="meetingtime" placeholder="内阁时间戳">
     </div>
 </form>
+-->
 
 <p>请点击上面的按钮。输入框会从 0 开始一直进行计时</p>
 <p>只能点一次！！！</p>
