--- a/Html.CabinetClock.html
+++ b/Html.CabinetClock.html
@@ -1,12 +1,16 @@
 <html>
 <head>
-    <link rel="stylesheet" href="/bower_components/material-design-lite/material.min.css">
-    <script src="/bower_components/material-design-lite/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <head>
     <title>CabinetTimer</title>
     <h1>CabinetTimer</h1>
     <p>！！会议过程中请不要关闭本窗口！！</p>
+</head>
+
+<head>
+    <style type="text/css"><!--body {margin:0 auto;width:512px;}</style>
 </head>
 
 <body>
@@ -43,13 +47,37 @@
     </script>
 
     <form>
-        <input type="button" value="开会啦！！" onClick="timedCount()" size=10>
+        <input type="button" value="开会啦！！" onClick="timedCount()" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
         <input type="text" id="meetingtime" size=20>
     </form>
 
-    <p>请点击上面的按钮。输入框会从 0 开始一直进行计时</p>
-    <p>只能点一次！！！</p>
-    <p>会议结束前，请重新记一次时间戳</p>
+<br>
+<br>
+<br>
+
+<!-- Contact Chip -->
+<span class="mdl-chip mdl-chip--contact">
+    <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">a</span>
+    <span class="mdl-chip__text">请点击上面的按钮。输入框会从 0 开始一直进行计时</span>
+</span>
+
+<br>
+
+<!-- Contact Chip -->
+<span class="mdl-chip mdl-chip--contact">
+    <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">b</span>
+    <span class="mdl-chip__text">只能点一次！！！</span>
+</span>
+
+<br>
+
+<!-- Contact Chip -->
+<span class="mdl-chip mdl-chip--contact">
+    <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">c</span>
+    <span class="mdl-chip__text">会议结束前，请重新记一次时间戳</span>
+</span>
+
+
 
     <script language=javascript> //时间戳转换为时间
         var meetingtimex = meetingtime
