--- a/index.html
+++ b/index.html
@@ -2,32 +2,61 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-<head>
-<style type="text/css"><!--body {margin:0 auto;width:512px;}</style>
-</head>
+<link rel="stylesheet" href="styles.css">
+</html>
+
+<!-- Simple header with fixed tabs. -->
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
+            mdl-layout--fixed-tabs">
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <!-- Title -->
+      <span class="mdl-layout-title">Title</span>
+    </div>
+    <!-- Tabs -->
+    <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+      <a href="#fixed-tab-1" class="mdl-layout__tab is-active">Tab 1</a>
+      <a href="#fixed-tab-2" class="mdl-layout__tab">Tab 2</a>
+      <a href="#fixed-tab-3" class="mdl-layout__tab">Tab 3</a>
+    </div>
+    </header>
+        <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Title</span>
+        </div>
+        <main class="mdl-layout__content">
+        <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
+        <div class="page-content">
+        <div>
+<!--Github 按钮-->
+    <style>
+         #view-source {
+        position: fixed;
+        display: block;
+        right: 0;
+        bottom: 0;
+        margin-right: 40px;
+        margin-bottom: 40px;
+        z-index: 900;
+        }
+    </style>
+        <a href="https://github.com/Stark2Chen/CabinetTimer" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Github</a>
 
 
 
-<br>
-<br>
-<br>
-
-    <div>
-        <!-- Wide card with share menu button -->
-        <style>
+    <!-- Wide card with share menu button -->
+    <style>
         .demo-card-wide.mdl-card {
             width: 512px;
         }
         .demo-card-wide > .mdl-card__title {
             color: #fff;
             height: 176px;
-            background: url('../assets/demos/welcome_card.jpg') center / cover;
+            background: url('../images/index_welcome_card.jpg') center / cover;
         }
         .demo-card-wide > .mdl-card__menu {
             color: #fff;
         }
-        </style>
-
+    </style>
         <div class="demo-card-wide mdl-card mdl-shadow--2dp">
             <div class="mdl-card__title">
                 <h2 class="mdl-card__title-text">Welcome</h2>
@@ -84,11 +113,22 @@
 <br>
 <br>
 <br>
+          </div>
+    </section>
+    <section class="mdl-layout__tab-panel" id="fixed-tab-2">
+      <div class="page-content"><!-- Your content goes here --></div>
+    </section>
+    <section class="mdl-layout__tab-panel" id="fixed-tab-3">
+      <div class="page-content"><!-- Your content goes here --></div>
+    </section>
+  </main>
+</div>
 
-    <!-- Accent-colored raised button with ripple -->
-    <button onclick="window.open('https://github.com/Stark2Chen/CabinetTimer')"class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-    在Github上贡献代码
-    </button>
+<br>
+<br>
+<br>
+
+    
 
 
 
