首页卡片的配图

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             .demo-card-wide > .mdl-card__title {
                 color: #fff;
                 height: 176px;
-                background: url('../images/index_welcome_card.jpg') center / cover;
+                background: url('http://p1.bqimg.com/567571/958def0057cf2f62.jpg') center / cover;
             }
             .demo-card-wide > .mdl-card__menu {
                 color: #fff;
@@ -91,21 +91,19 @@
 <br>
 <br>
 
-    <!-- Contact Chip -->
+    <!-- Chip -->
     <span class="mdl-chip mdl-chip--contact">
         <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">i</span>
         <span class="mdl-chip__text">理想状态下的开发进度</span>
     </span>
-
-    <br>
-    <br>
-
+<br>
+<br>
     <!-- 开发进度进度条 -->
     <div id="p3" class="mdl-progress mdl-js-progress"></div>
         <script>
         document.querySelector('#p3').addEventListener('mdl-componentupgraded', function() {
-        this.MaterialProgress.setProgress(10);
-        this.MaterialProgress.setBuffer(87);
+        this.MaterialProgress.setProgress(12);
+        this.MaterialProgress.setBuffer(85);
         });
         </script>
 
