--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <link rel="stylesheet" href="styles.css">
 </html>
 
+    <style type="text/css">
+		body{background:#fff;text-align:center;}
+		div{width:778px;margin:0 auto;background:#fff;text-align:left;}
+	</style>
+
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="images/android-desktop.png">
@@ -14,10 +19,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Material Design Lite">
     <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
-
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#3372DF">
 
     <!-- 浏览器图标 -->
     <link rel="shortcut icon" href="images/favicon.png">
@@ -36,12 +37,8 @@
     </style>
         <a href="https://github.com/Stark2Chen/CabinetTimer" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Github</a>
 
-    <!--居中-->
-    <head> 
-        <style type="text/css"><!--body {margin:0 auto;width:512px;}</style> 
-    </head> 
     <!-- CabineteTimer卡片 -->
-    <div>
+    <body>
         <style>
             .demo-card-wide.mdl-card {
                 width: 512px;
@@ -70,7 +67,7 @@
             </div>
             </div>
             </div>
-        </div>
+        </body>
 
 <br>
 <br>
