--- a/Html.CabinetClock.html
+++ b/Html.CabinetClock.html
@@ -3,21 +3,57 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-<head>
-    <title>CabinetTimer</title>
-    <h1>CabinetTimer</h1>
-    <p>！！会议过程中请不要关闭本窗口！！</p>
+    <script defer src="clientSideInclude.js"></script>
 </head>
 
-<head>
-    <style type="text/css"><!--body {margin:0 auto;width:512px;}</style>
-</head>
+<body>
+    <!--右下角 Github 按钮-->
+    <style>
+         #view-source {
+        position: fixed;
+        display: block;
+        right: 0;
+        bottom: 0;
+        margin-right: 40px;
+        margin-bottom: 40px;
+        z-index: 900;
+        }
+    </style>
+        <a href="https://github.com/Stark2Chen/CabinetTimer" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Github</a>
+    <!--右下角 BLOG 按钮-->
+    <style>
+         #into-blog {
+        position: fixed;
+        display: block;
+        right: 0;
+        bottom: 0;
+        margin-right: 40px;
+        margin-bottom: 80px;
+        z-index: 900;
+        }
+    </style>
+        <a href="http://www.ix-4x.cc" target="_blank" id="into-blog" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">BLOG</a>
+</body>
+
+
+<!-- Contact Chip -->
+<span class="mdl-chip mdl-chip--contact">
+    <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">i</span>
+    <span class="mdl-chip__text">会议过程中，请不要关闭本窗口！</span>
+</span>
+
+<br>
+<br>
+
+    <style type="text/css">
+		body{background:#fff;text-align:center;}
+		div{width:778px;margin:0 auto;background:#fff;text-align:left;}
+	</style>
 
 <body>
     <script type="text/javascript">
         var d=new Date();
         document.write("当前时间戳（13位）:  " + d.getTime());
-        document.write("  把他记下来，待会有用")
     </script>
 
     <form name=basic>
@@ -84,11 +120,6 @@
         commonTime = meetingtimex.toLocaleString()
         document.getElementById('meetingtimex').value=c
     </script>
-
-    <form>
-        <input type="text" id="meetingtime">
-    </form>
-
 
 </body>
 </html>
