调整时间戳显示的位置

--- a/Html.CabinetClock.html
+++ b/Html.CabinetClock.html
@@ -39,7 +39,7 @@
 <!-- Contact Chip -->
 <span class="mdl-chip mdl-chip--contact">
     <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">i</span>
-    <span class="mdl-chip__text">会议过程中，请不要关闭本窗口！</span>
+    <span class="mdl-chip__text">会议过程中不要关闭窗口</span>
 </span>
 
 <br>
@@ -83,7 +83,7 @@
     </script>
 
     <form>
-        <input type="button" value="开会啦！！" onClick="timedCount()" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+        <input type="button" value="开始计时" onClick="timedCount()" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
         <input type="text" id="meetingtime" size=20>
     </form>
 
@@ -94,7 +94,7 @@
 <!-- Contact Chip -->
 <span class="mdl-chip mdl-chip--contact">
     <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">a</span>
-    <span class="mdl-chip__text">请点击上面的按钮。输入框会从 0 开始一直进行计时</span>
+    <span class="mdl-chip__text">点击按钮开始进行计时</span>
 </span>
 
 <br>
@@ -102,7 +102,7 @@
 <!-- Contact Chip -->
 <span class="mdl-chip mdl-chip--contact">
     <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">b</span>
-    <span class="mdl-chip__text">只能点一次！！！</span>
+    <span class="mdl-chip__text">注意按钮只能点击一次</span>
 </span>
 
 <br>
@@ -110,7 +110,7 @@
 <!-- Contact Chip -->
 <span class="mdl-chip mdl-chip--contact">
     <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">c</span>
-    <span class="mdl-chip__text">会议结束前，请重新记一次时间戳</span>
+    <span class="mdl-chip__text">会议结束请再次记时间</span>
 </span>
 
 
