--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </script>
             </div>
             <div class="mdl-card__actions mdl-card--border">
-                <a  onclick="window.location.href='Html.CabinetClock.html'" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                <a  onclick="window.location.href='clock.html'" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                 Into
                 </a>
             </div>
