--- a/clock.html
+++ b/clock.html
@@ -135,40 +135,40 @@
 <br>
 <br>
 
-<!-- Contact Chip -->
-<span class="mdl-chip mdl-chip--contact">
-    <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">1</span>
-    <span class="mdl-chip__text">会议过程中不要关闭窗口</span>
-</span>
-<br>
+    <!-- Contact Chip -->
+    <body>
+        <span class="mdl-chip mdl-chip--contact">
+        <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">1</span>
+        <span class="mdl-chip__text">会议过程中不要关闭窗口</span>
+        </span>
+    </body>
+    <br>
 
-<!-- Contact Chip -->
-<span class="mdl-chip mdl-chip--contact">
-    <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">2</span>
-    <span class="mdl-chip__text">点击按钮开始进行计时</span>
-</span>
-<br>
+    <!-- Contact Chip -->
+    <body>
+        <span class="mdl-chip mdl-chip--contact">
+        <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">2</span>
+        <span class="mdl-chip__text">点击按钮开始进行计时</span>
+        </span>
+    </body>
+    <br>
 
-<!-- Contact Chip -->
-<span class="mdl-chip mdl-chip--contact">
-    <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">3</span>
-    <span class="mdl-chip__text">注意按钮只能点击一次</span>
-</span>
-<br>
+    <!-- Contact Chip -->
+    <body>
+        <span class="mdl-chip mdl-chip--contact">
+        <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">3</span>
+        <span class="mdl-chip__text">注意按钮只能点击一次</span>
+        </span>
+    </body>
+    <br>
 
-<!-- Contact Chip -->
-<span class="mdl-chip mdl-chip--contact">
-    <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">4</span>
-    <span class="mdl-chip__text">会议结束请再次记时间</span>
-</span>
-
-
-
-    <script language=javascript> //时间戳转换为时间
-        var meetingtimex = meetingtime
-        commonTime = meetingtimex.toLocaleString()
-        document.getElementById('meetingtimex').value=c
-    </script>
+    <!-- Contact Chip -->
+    <body>
+        <span class="mdl-chip mdl-chip--contact">
+        <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">4</span>
+        <span class="mdl-chip__text">会议结束请再次记时间</span>
+        </span>
+    <body>
 
 </body>
 </html>
