--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-<link rel="stylesheet" href="/bower_components/material-design-lite/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="/bower_components/material-design-lite/style.css">
 </html>
 
     <style type="text/css">
@@ -96,20 +96,59 @@
 <br>
 <br>
     <!-- Chip -->
-    <span class="mdl-chip mdl-chip--contact">
+    <body>
+        <span class="mdl-chip mdl-chip--contact">
         <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white">i</span>
         <span class="mdl-chip__text">理想状态下的开发进度</span>
-    </span>
+        </span>
+    </body>
 <br>
 <br>
     <!-- 开发进度进度条 -->
-    <div id="p3" class="mdl-progress mdl-js-progress"></div>
-    <script>
-    document.querySelector('#p3').addEventListener('mdl-componentupgraded', function() {
-    this.MaterialProgress.setProgress(12);
-    this.MaterialProgress.setBuffer(85);
-    });
-    </script>
+    <body>
+        <div id="p3" class="mdl-progress mdl-js-progress"></div>
+        <script>
+        document.querySelector('#p3').addEventListener('mdl-componentupgraded', function() {
+        this.MaterialProgress.setProgress(25);
+        this.MaterialProgress.setBuffer(85);
+        });
+        </script>
+    </body>
+
+<br>
+<br>
+<br>
+
+    
+    <!-- Square card -->
+    <body>
+        <style>
+        .demo-card-square.mdl-card {
+        width: 512px;
+        height: 176px;
+        }
+        .demo-card-square > .mdl-card__title {
+        color: #fff;
+        background:
+            url('../assets/demos/dog.png') bottom right 15% no-repeat #46B6AC;
+        }
+        </style>
+
+        <div class="demo-card-square mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title mdl-card--expand">
+            <h2 class="mdl-card__title-text">Update</h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+            You can fork it to help us to improve it!
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+            <a href="https://github.com/Stark2Chen/CabinetTimer" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            Fork
+            </a>
+        </div>
+        </div>
+    </body>
+
 
 <br>
 <br>
