--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <html>
-<<<<<<< HEAD
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <head>
-<style type="text/css"><!--body {margin:0 auto;width:512px;}</style>
 </head>
 
-
-=======
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="/bower_components/material-design-lite/style.css">
-</html>
+
 
     <style type="text/css">
 		body{background:#fff;text-align:center;}
@@ -61,7 +57,7 @@
         }
     </style>
         <a href="http://siocx.space" target="_blank" id="into-blog" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">BLOG</a>
->>>>>>> parent of 8815880... Revert "更新博客地址"
+
 
 <br>
 <br>
@@ -76,7 +72,7 @@
         .demo-card-wide > .mdl-card__title {
             color: #fff;
             height: 176px;
-            background: url('../assets/demos/welcome_card.jpg') center / cover;
+            background: url('http://p1.bqimg.com/567571/958def0057cf2f62.jpg') center / cover;
         }
         .demo-card-wide > .mdl-card__menu {
             color: #fff;
@@ -88,12 +84,15 @@
                 <h2 class="mdl-card__title-text">Welcome</h2>
             </div>
         <div class="mdl-card__supporting-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Mauris sagittis pellentesque lacus eleifend lacinia...
+        <script type="text/javascript">
+            var d=new Date();
+            document.write("当前时间戳（13位）:  " + d.getTime());
+            document.write("  把他记下来，待会有用")
+        </script>
             </div>
         <div class="mdl-card__actions mdl-card--border">
-            <a  onclick="window.location.href='Html.CabinetClock.html'" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                Have a try!
+            <a  onclick="window.location.href='clock.html'" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                INTO
             </a>
         </div>
         <div class="mdl-card__menu">
@@ -108,11 +107,7 @@
 <br>
 <br>
 
-    <script type="text/javascript">
-        var d=new Date();
-        document.write("当前时间戳（13位）:  " + d.getTime());
-        document.write("  把他记下来，待会有用")
-    </script>
+
 
 <br>
 <br>
@@ -131,8 +126,8 @@
     <div id="p3" class="mdl-progress mdl-js-progress"></div>
         <script>
         document.querySelector('#p3').addEventListener('mdl-componentupgraded', function() {
-        this.MaterialProgress.setProgress(10);
-        this.MaterialProgress.setBuffer(87);
+        this.MaterialProgress.setProgress(25);
+        this.MaterialProgress.setBuffer(90);
         });
         </script>
 
